--- a/app/src/main/res/values-bg-rBG/strings.xml
+++ b/app/src/main/res/values-bg-rBG/strings.xml
@@ -704,6 +704,11 @@
     <string name="cost_money">Цена: $</string>
     <string name="cost_free">Безплатно</string>
     <string name="multiline_title_on">Натиснете Enter, за да въведете нови редове</string>
+    <string name="sync_warning_google_tasks_title">Относно синхронизацията с Google Task</string>
+    <string name="button_learn_more">Научете повече</string>
+    <string name="sync_warning_google_tasks">Не всички подробности от задачата се синхронизират с Google Tasks</string>
+    <string name="sync_warning_microsoft_title">Относно синхронизацията с Microsoft To Do</string>
+    <string name="sync_warning_microsoft">Не всички подробности от задачата се синхронизират с Microsoft To Do.</string>
     <string name="subtasks_multilevel_microsoft">Вложени задачи не се поддържат от Microsoft To Do</string>
     <string name="app_settings">Настройки на приложението</string>
     <string name="banner_app_updated_description">Приложението Tasks е обновено до издание %s. Ще прегледате ли бележките към изданието?</string>
