--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -727,7 +727,12 @@
     <string name="add_shortcut_to_home_screen">Agregar acceso directo a la pantalla de inicio</string>
     <string name="subtasks_multilevel_microsoft">Microsoft To Do no admite subtareas de múltiples niveles</string>
     <string name="cost_money">Precio: $</string>
+    <string name="sync_warning_google_tasks_title">Acerca de la sincronización de Google Tasks</string>
     <string name="cost_more_money">Precio: $$$</string>
+    <string name="sync_warning_google_tasks">No todos los detalles de las tareas se sincronizan con Google Tasks</string>
+    <string name="button_learn_more">Más información</string>
+    <string name="sync_warning_microsoft_title">Acerca de la sincronización de Microsoft To Do</string>
+    <string name="sync_warning_microsoft">No todos los detalles de las tareas se sincronizan con Microsoft To Do.</string>
     <string name="price_per_month_with_currency">%s/mes</string>
     <string name="multiline_title_off">Presione en Hecho para guardar la tarea</string>
     <string name="comment">Comentario</string>
