--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -719,8 +719,13 @@
     <string name="cost_more_money">Cijena: $$$</string>
     <string name="multiline_title">Dozvoli višeredne naslove</string>
     <string name="multiline_title_on">Pritisni tipku Enter za dodavanje prijeloma retka</string>
+    <string name="sync_warning_microsoft_title">O sinkronizaciji s Microsoft To Do</string>
+    <string name="sync_warning_google_tasks_title">O sinkronizaciji s Google Tasks</string>
+    <string name="button_learn_more">Saznaj više</string>
+    <string name="sync_warning_google_tasks">S Google Tasks se ne sinkroniziraju se svi detalji zadataka.</string>
     <string name="delete_comment">komentar</string>
     <string name="cost_free">Besplatno</string>
+    <string name="sync_warning_microsoft">S Microsoft To Do se ne sinkroniziraju se svi detalji zadataka.</string>
     <string name="yesterday">Jučer</string>
     <string name="price_per_month_with_currency">%s/mjesec</string>
     <string name="price_per_year_with_currency">%s/godina</string>
