--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -694,6 +694,11 @@
     <string name="delete_comment">yorum</string>
     <string name="yesterday">Dün</string>
     <string name="quiet_hours_in_effect">Sessiz saatler etkin</string>
+    <string name="sync_warning_microsoft_title">Microsoft To Do eşzamanlayıcı hakkında</string>
+    <string name="sync_warning_microsoft">Tüm görev ayrıntıları Microsoft To Do ile eşzamanlanmaz.</string>
+    <string name="sync_warning_google_tasks_title">Google Görevler eşzamanlayıcıyla ilgili</string>
+    <string name="button_learn_more">Daha çoğunu öğren</string>
+    <string name="sync_warning_google_tasks">Tüm görev ayrıntıları Google Görevler ile eşzamanlanmaz</string>
     <string name="price_per_month_with_currency">%s/ay</string>
     <string name="price_per_year_with_currency">%s/yıl</string>
     <string name="enable_alarms">Doğru zamanda bildirim al</string>
