--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -728,7 +728,12 @@
     <string name="cost_more_money">Вартість: $$$</string>
     <string name="multiline_title">Дозволити багаторядкові заголовки</string>
     <string name="multiline_title_on">Натисніть Enter, щоб перенести рядок</string>
+    <string name="sync_warning_microsoft">Не всі відомості про завдання синхронізуються з Microsoft To Do.</string>
+    <string name="sync_warning_google_tasks_title">Про синхронізацію з Google Task</string>
+    <string name="sync_warning_microsoft_title">Про синхронізацію з Microsoft To Do</string>
+    <string name="sync_warning_google_tasks">Не всі відомості про завдання синхронізуються з Google Tasks</string>
     <string name="price_per_year_with_currency">%s/рік</string>
+    <string name="button_learn_more">Докладніше</string>
     <string name="enable_alarms">Отримуйте сповіщення в потрібний час</string>
     <string name="enable_alarms_description">Щоб бути впевненим, що ви отримаєте сповіщення в потрібний час, надайте дозвіл на встановлення будильників і нагадувань у Налаштуваннях</string>
     <string name="price_per_month_with_currency">%s/місяць</string>
