Update default reminder setting
Configures whether default reminders are added to all day tasks, instead
of ignoring reminders for all day tasks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -150,7 +150,7 @@ File %1$s contained %2$s.\n\n
   <string name="rmd_EPr_quiet_hours_start_title">Quiet hours start</string>
   <string name="rmd_EPr_quiet_hours_end_title">Quiet hours end</string>
   <string name="rmd_EPr_rmd_time_title">Reminder time</string>
-  <string name="rmd_EPr_rmd_time_desc">Notifications for tasks without due times will appear at %s</string>
+  <string name="rmd_EPr_rmd_time_desc">Notifications for all day tasks will appear at %1$s</string>
   <string name="persistent_notifications">Persistent notifications</string>
   <string name="persistent_notifications_description">Persistent notifications cannot be cleared</string>
   <string name="swipe_to_snooze_title">Swipe to snooze</string>
@@ -421,7 +421,7 @@ File %1$s contained %2$s.\n\n
   <string name="error_adding_account">Error: %s</string>
   <string name="notification_disable_battery_optimizations_description">Battery optimizations may delay notifications</string>
   <string name="bundle_notifications">Bundle notifications</string>
-  <string name="default_reminder">Default reminder</string>
+  <string name="default_reminder">All day tasks</string>
   <string name="badges">Badges</string>
   <string name="list">List</string>
   <string name="repeats_from">Repeats from</string>
@@ -453,7 +453,9 @@ File %1$s contained %2$s.\n\n
   <string name="list_separator_with_space">,\u0020</string>
   <string name="dont_add_to_calendar">Don\'t add to calendar</string>
   <string name="default_calendar">Default calendar</string>
-  <string name="rmd_time_description">Show notifications for tasks without due times</string>
+  <string name="add_default_reminders">Add default reminders</string>
+  <string name="rmd_time_enabled_on">Add default reminders to all day tasks</string>
+  <string name="rmd_time_enabled_off">Do not add default reminders to all day tasks</string>
   <string name="badges_description">Display a task count on Tasks\' launcher icon. Not all launchers support badges.</string>
   <string name="bundle_notifications_summary">Combine multiple notifications into one</string>
   <string name="repeat_monthly_every_day_of_nth_week">every %1$s %2$s</string>
