--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -689,6 +689,7 @@ File %1$s contained %2$s.\n\n
   <string name="remove_user_confirmation">%1$s will no longer have access to %2$s</string>
   <string name="share_list">Share list</string>
   <string name="email">Email</string>
+  <string name="invalid_email_address">Invalid email address</string>
   <string name="invite">Invite</string>
   <string name="invite_declined">Invite declined</string>
   <string name="invite_awaiting_response">Invite awaiting response</string>
